# spudlang

./: .gitignore  LICENSE.txt  README.md  hatch_build.py  pyproject.toml  spud.grammar
src/spud/: __about__.py  __init__.py  __main__.py
src/spud/core/: __init__.py  ast_printer.py  environment.py  environment_printer.py  file_reader.py  keywords.py  operator_info.py  operator_precedence.py  operators.py  position.py  reader_protocol.py  resolve_error.py  stdin_reader.py  string_reader.py  tree_printer.py  trie.py
src/spud/di/: __init__.py  container.py  logging.py  stage_four_trie.py  stage_two_trie.py
src/spud/lsp/: __main__.py  container.py  diagnostics.py  hover.py  lsp_types.py  server.py
src/spud/stage_eight/: stage_eight.py  type_check_result.py
src/spud/stage_five/: __init__.py  stage_five.py  stage_five_token.py  stage_five_token_type.py
src/spud/stage_four/: __init__.py  stage_four.py  stage_four_token.py  stage_four_token_type.py
src/spud/stage_one/: __init__.py  stage_one.py  stage_one_token.py  stage_one_token_type.py
src/spud/stage_seven/: __init__.py  resolve_error.py  resolve_result.py  stage_seven.py
src/spud/stage_six/: __init__.py  ast_node.py  binary_op.py  binding.py  boolean_literal.py  classify_pass.py  condition_branch.py  decompose_pass.py  float_literal.py  for_loop.py  function_call.py  function_def.py  function_type_expr.py  identifier.py  if_else.py  inline_function_def.py  int_literal.py  list_literal.py  list_type_expr.py  named_type.py  node_type.py  numeric_literal.py  parse_error.py  parser.py  parser_protocol.py  program.py  raw_string_literal.py  stage_six.py  stage_six_token.py  stage_six_token_type.py  string_literal.py  token_helpers.py  token_stream.py  type_expression.py  typed_param.py  unary_op.py  unit_literal.py
src/spud/stage_three/: __init__.py  stage_three.py  stage_three_token.py  stage_three_token_type.py
src/spud/stage_two/: __init__.py  keyword_pass.py  stage_two.py  stage_two_token.py  stage_two_token_type.py  string_pass.py
src/spud_check/: __init__.py  __main__.py  builtin_types.py  container.py  operator_types.py  type_check_result.py  type_checker.py  type_resolver.py
src/spud_check/checkers/: __init__.py  binary_op_checker.py  binding_checker.py  checker_protocol.py  for_loop_checker.py  function_call_checker.py  function_def_checker.py  if_else_checker.py  inline_function_def_checker.py  list_literal_checker.py  node_checker.py  unary_op_checker.py
src/spud_check/type_errors/: __init__.py  argument_count_mismatch_error.py  argument_type_mismatch_error.py  branch_type_mismatch_error.py  condition_not_bool_error.py  element_type_mismatch_error.py  heterogeneous_list_error.py  not_callable_error.py  not_iterable_error.py  operator_type_error.py  return_type_mismatch_error.py  type_error.py  type_mismatch_error.py  unary_operator_type_error.py  unknown_type_error.py
src/spud_check/typed_nodes/: __init__.py  typed_binary_op.py  typed_binding.py  typed_boolean_literal.py  typed_condition_branch.py  typed_float_literal.py  typed_for_loop.py  typed_function_call.py  typed_function_def.py  typed_identifier.py  typed_if_else.py  typed_inline_function_def.py  typed_int_literal.py  typed_list_literal.py  typed_node.py  typed_program.py  typed_string_literal.py  typed_unary_op.py  typed_unit_literal.py
src/spud_fmt/: __init__.py  __main__.py  config.py  config_loader.py  container.py  formatter.py  formatter_protocol.py
src/spud_fmt/formatters/: __init__.py  binary_op_fmt.py  binding_fmt.py  body_fmt.py  boolean_fmt.py  float_fmt.py  for_loop_fmt.py  function_call_fmt.py  function_def_fmt.py  identifier_fmt.py  if_else_fmt.py  inline_function_def_fmt.py  int_fmt.py  list_literal_fmt.py  numeric_fmt.py  raw_string_fmt.py  string_fmt.py  type_fmt.py  unary_op_fmt.py  unit_literal_fmt.py
src/spud_lsp/: __init__.py  __main__.py  completion.py  container.py  diagnostics.py  goto_def.py  hover.py  lsp_types.py  semantic_tokens.py  server.py  symbols.py  utils.py
tests/: __init__.py  fuzz_helpers.py  test_fmt.py  test_fmt_fuzz.py  test_golden.py  test_golden_stage_eight.py  test_golden_stage_seven.py  test_keyword_pass.py  test_logging.py  test_lsp_smoke.py  test_parser_fuzz.py  test_stage_five.py  test_stage_six.py  test_stage_three.py  test_stage_two.py  test_string_pass.py
tests/core/: test_pipeline.py
tests/fmt/: helpers.py  test_bindings.py  test_config.py  test_control_flow.py  test_float_literal.py  test_functions.py  test_literals.py  test_operators.py  test_programs.py
tests/golden/fmt/: already_formatted.expected  complex_program.expected  complex_program.spud  for_loop.expected  for_loop.spud  function_def.expected  function_def.spud  if_else.expected  if_else.spud  inline_functions.expected  inline_functions.spud  list_literal.expected  list_literal.spud  negation.expected  negation.spud  nested_functions.expected  nested_functions.spud  operator_precedence.expected  operator_precedence.spud  paren_preservation.expected  simple_bindings.expected  simple_bindings.spud  unary_plus.expected  unary_plus.spud  unit_literal.expected  unit_literal.spud
tests/golden/general/: for_loop.spud  function_def.expected  list_operations.expected  list_operations.spud  property_access.spud  raw_string.spud  while_loop.expected  while_loop.spud
tests/golden/stage_eight/: branch_mismatch.expected  branch_mismatch.spud  for_loop_errors.expected  for_loop_errors.spud  function_call_errors.expected  function_call_errors.spud  operator_errors.expected  operator_errors.spud  type_mismatch.expected  type_mismatch.spud  unknown_type.expected  unknown_type.spud  (+1 more)
tests/lsp/: test_diagnostics.py  test_goto_def.py  test_hover.py  test_semantic_tokens.py  test_smoke.py
tests/stage_eight/: test_type_checker.py
tests/stage_seven/: test_environment.py  test_resolver.py
tests/stage_six/: helpers.py  test_bindings.py  test_control_flow.py  test_expressions.py  test_float_literal.py  test_functions.py  test_int_literal.py  test_literals.py  test_numeric_token.py  test_programs.py  test_type_parser.py
(+261 files in other folders)
