[build-system]
requires = ["hatchling", "ruff"]
build-backend = "hatchling.build"

[project]
name = "spud"
version = "0.0.1"
description = 'Programming language to generate prompts'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = []
authors = [
  { name = "hashem78", email = "hashem.olayano@gmail.com" },
]
dependencies = [
    "cyclopts>=4.10.1",
    "dependency-injector>=4.49.0",
    "pydantic>=2.12.5",
    "pygls>=2.0.0",
    "structlog>=25.5.0",
]

[project.scripts]
spud = "spud.__main__:entrypoint"
spud-lsp = "spud.lsp.__main__:entrypoint"

[project.urls]
Documentation = "https://github.com/hashem78/spud#readme"
Issues = "https://github.com/hashem78/spud/issues"
Source = "https://github.com/hashem78/spud"

[tool.hatch.envs.default]
installer = "uv"
python = "3.12"

[tool.hatch.envs.dev]
extra-dependencies = [
  "ruff",
  "ty",
  "pytest",
]

[tool.hatch.envs.dev.scripts]
lint = "ruff check {args:src/spud tests}"
fmt = "ruff format {args:src/spud tests}"
fmt-check = "ruff format --check {args:src/spud tests}"
typecheck = "ty check {args}"
test = "pytest {args:tests} && python tests/test_golden.py"

[tool.hatch.envs.build]
python = "3.12"
extra-dependencies = [
  "nuitka[onefile]",
]

[tool.hatch.envs.build.scripts]
binary = "python -m nuitka --onefile --output-dir=dist --output-filename=spud src/spud/__main__.py"
lsp-binary = "python -m nuitka --onefile --output-dir=dist --output-filename=spud-lsp src/spud/lsp/__main__.py"

[tool.hatch.build.hooks.custom]

[tool.ty.src]
exclude = ["hatch_build.py"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source_pkgs = ["spud", "tests"]
branch = true
parallel = true
omit = []

[tool.coverage.paths]
spud = ["src/spud", "*/spud/src/spud"]
tests = ["tests", "*/spud/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]
